# hspretty

./: CHANGELOG.md  README.md  cabal.project  format.hs  hspretty.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: CLI.hs  Formatter.hs  Log.hs  PathFilter.hs  RunMode.hs
src/Formatters/: CabalFmt.hs  Ormolu.hs
test/: Test.hs
