cabal-version:      2.4
name:               hspretty
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.14.1.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

library
  import:          base, ghc-options
  hs-source-dirs:  src
  exposed-modules:
    Formatter
    Formatters.CabalFmt
    Formatters.Ormolu
    PathFilter
    RunMode

  build-depends:
    , bytestring  ^>=0.10.12.0
    , directory   ^>=1.3.6.0
    , ormolu      ^>=0.1.4.1
    , path        ^>=0.8.0
    , path-io     ^>=1.6.2
    , process     ^>=1.6.11.0
    , text        ^>=1.2.4.1
    , text-short  ^>=0.1.3
    , unliftio    ^>=0.2.16
    , void        ^>=0.7.3

test-suite hspretty-test
  import:         base, ghc-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:  doctest ^>=0.18.1

executable hspretty
  import:         base, ghc-options
  main-is:        Main.hs
  hs-source-dirs: app
